# ppt-conform

./: .gitignore  PROJECT_STATUS.md  README.md  app.py  debug_master.py  deploy.sh  pyproject.toml  requirements.txt
cli/: main.py
config/: font_mapping.yaml  layout_mapping.yaml  layout_mappings.yaml  master_styles.yaml  validation_rules.yaml  watermark_blacklist.yaml
core/: __init__.py  models.py
core/adapter/: style_adapter.py
core/analyzer/: __init__.py  template_analyzer.py  template_format_extractor.py
core/classifier/: __init__.py  slide_classifier.py
core/clrmap/: __init__.py  resolver.py
core/extractor/: __init__.py  pptx_extractor.py
core/migrator/: __init__.py  coordinate_mapper.py  object_migrator.py  overflow_adjuster.py  position_matcher.py  slide_migrator.py
core/precheck/: __init__.py  analyzer.py
core/qa/: __init__.py  reporter.py
core/registry/: __init__.py  template_registry.py
core/replayer/: __init__.py  content_replayer.py
core/validator/: __init__.py  rules.py  validator.py
core/watermark/: __init__.py  detector.py
docs/: 经验总结.md
scripts/: cleanup_daemon.py  cleanup_pptx.sh
skill/: __init__.py  ppt_conform_skill.py
static/: schneider_style.css
templates/: corporate_template.pptx
tests/: test_clrmap.py  test_conversion_compare.py  test_e2e.py  test_extractor.py  test_hybrid_conversion.py  test_models.py  test_object_migration.py  test_precheck.py  test_qa_reporter.py  test_registry.py  test_replayer.py  test_slide_classifier.py  test_slide_migrator.py  test_validator.py  test_watermark_detector.py
(+3 files in other folders)
